--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "@telegram-apps/sdk-react": "^3.3.1",
     "@telegram-apps/telegram-ui": "^2.1.9",
     "@tonconnect/ui-react": "^2.1.0",
     "eruda": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
